# swh-docs

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  search.html  sitemap.xml
.github/workflows/: docs.yml
.github/workflows/mkdocs/: mkdocs.sh  requirements.txt
develop/: index.html
develop_intro/: index.html
docs/: develop.md  develop_intro.md  index.md  prerequisites.md  research_intro.md  research_manual.md  research_prerequisites.md  researchers.md  user_manual.md
research_intro/: index.html
research_manual/: index.html
research_prerequisites/: index.html
search/: search_index.json
