[tool.poetry]
name = "swh-docs"
version = "0.1.0"
description = ""
authors = ["wilkos-dans <wilko.steinhoff@dans.knaw.nl>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.12"
mkdocs = "^1.5.3"
mkdocs-markdownextradata-plugin = "^0.2.5"
mkdocs-mermaid2-plugin = "^1.1.1"
pymdown-extensions = "^10.5"
pyyaml = "^6.0.1"
pygments = "^2.17.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
